updating to Elasticearch 6.2.1